implement swagger for web service documents

--- a/spring-boot-j8-lombok/pom.xml
+++ b/spring-boot-j8-lombok/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bootj8</groupId>
-	<artifactId>boot-j8</artifactId>
+	<artifactId>spring-boot-j8-lombok</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>boot-j8</name>
 	<description>Demo project for Spring Boot</description>
@@ -50,6 +50,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 	</dependencies>
 
